[package]
name = "ambiway"
version = "0.3.1"
edition = "2024"

[dependencies]
clap = { version = "4.5.58", features = ["derive"] }
directories = "6.0.0"
opencv = { version = "0.98.1", default-features = false, features = [
    "clang-runtime",
    "videoio",
] }
openrgb2 = "0.3.0"
rgb = "0.8.52"
serde = { version = "1.0.228", features = ["derive"] }
tokio = {"version" = "1.49.0", features = ["full"]}
toml = "0.9.11"
xrandr = "0.2.0"
