[package]
name = "ambiway"
version = "0.3.1"
edition = "2024"

[dependencies]
clap = { version = "4.6.0", features = ["derive"] }
directories = "6.0.0"
opencv = { version = "0.98.1", default-features = false, features = [
    "clang-runtime",
    "videoio",
] }
openrgb2 = "0.3.0"
rgb = "0.8.53"
serde = { version = "1.0.228", features = ["derive"] }
tokio = {"version" = "1.50.0", features = ["full"]}
toml = "1.0.6"
xrandr = "0.2.0"
