[package]
name = "ambiway"
version = "0.5.1"
edition = "2024"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
directories = "6.0.0"
opencv = { version = "0.99.0", default-features = false, features = [
    "clang-runtime",
    "videoio",
] }
openrgb2 = "0.3.0"
rgb = "0.8.53"
serde = { version = "1.0.228", features = ["derive"] }
tokio = {"version" = "1.52.3", features = ["full"]}
tokio-serial = "5.4.5"
toml = "1.1.2"
xrandr = "0.2.0"
